kubernetes/apps/external/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
