kubernetes/apps/external/home-assistant/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: home-assistant.png
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/widget.type: homeassistant
    gethomepage.dev/widget.url: https://home-assistant.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "home-assistant.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: external
subsets:
  - addresses:
      - ip: ${HASS_IP}
    ports:
      - name: http
        port: 8123
        protocol: TCP
